tests/invalid/readonly/write_non_descendant.pts
prototype A {
    readonly int x = 0;
}

prototype C {
    function f(A a) : void {
        a.x = 1;
    }
}
